# smores_drone_software

./: .gitattributes  .gitignore  .gitmodules  Dockerfile  README.md  devcontainer.json  pip-requirements.txt  readme.md  run_container.sh
.github/ISSUE_TEMPLATE/: common-feature-task.md
ROS/: Dockerfile  build.sh  run.sh
ROS/humble/: Dockerfile  Dockerfile_ROS2  build.sh  ros_entrypoint.sh  run.sh
ROS/noetic/: Dockerfile_ROS1
ROS1/epson_g365_driver/: CMakeLists.txt  README.md  package.xml
ROS1/epson_g365_driver/launch/: epson_g320_g354_g364.launch  epson_g365.launch  epson_g365_raw.launch  epson_g365_rotated.launch  epson_g365_usasoc.launch  epson_g370.launch  epson_v340.launch
ROS1/epson_g365_driver/src/: Makefile  epson_imu_driver_node.cpp  hcl.h  hcl_gpio.c  hcl_gpio.h  hcl_linux.c  hcl_uart.c  hcl_uart.h  imu_rotate.cpp  main_csvlogger.c  main_helper.c  main_helper.h  main_regdump.c  main_screen.c  readme.txt  sensor_epsonCommon.c  sensor_epsonCommon.h  sensor_epsonG320.c  sensor_epsonG320.h  sensor_epsonG325.c  sensor_epsonG325PDF0.h  sensor_epsonG354.c  sensor_epsonG354.h  sensor_epsonG364.c  sensor_epsonG364PDC0.h  sensor_epsonG364PDCA.h  sensor_epsonG365.c  sensor_epsonG365PDC0.h  sensor_epsonG365PDF0.h  sensor_epsonG370.c  sensor_epsonG370PDC0.h  sensor_epsonG370PDF0.h  sensor_epsonUart.c  sensor_epsonV340.c  sensor_epsonV340.h
ROS2/epson_g365_driver_ros2/: CMakeLists.txt
ROS2/epson_g365_driver_ros2/launch/: epson_g365_fixed_launch.py  g370_launch.py
calibrations/ORDv1_Smores_Feb2025/: cam_relative_pose.yaml  imu_guess_subcanopy.yaml  left_thermal.yaml  right_thermal.yaml
calibrations/PhxPro_March2025/: imu.yaml  imu_inflated.yaml  imu_verbose.txt
configs/: ordv1_thermal_left.yaml  ordv1_thermal_right.yaml  sensor_parameters.yaml
data/ms2/: download_MS2_sync_data_sequences.sh
launch/: drivers_launch.py
src/MAC-VO-ROS2/MACVO_ROS2/: MACVO.py
src/MAC-VO-ROS2/MACVO_ROS2/config/: flirboson_config.yaml
src/benchmarking/: extract_bags.py  moge_bcmc.py
src/cam_interfaces/: CMakeLists.txt  package.xml
src/cam_interfaces/msg/: MoGEOutput.msg  StereoPair.msg  TSMoGEOutput.msg
src/depth-v2/: CMakeLists.txt  package.xml
src/depth-v2/src/: depth_v2_node.cpp
src/depth_perception/: package.xml  setup.cfg  setup.py
src/depth_perception/depth_perception/: madpose_metric_solver.py  moge_inference_mono.py  noise-estimation.py  pcl_sub.py  publish_thermals.py  sync_stereo_pair.py  thermal_left_deprecated.py  thermal_right_deprecated.py
src/depth_perception/depth_perception/launch/: launch.py  lunch.py  stereo_bm_launch.py
src/epson_g365_driver_ros2/: CMakeLists.txt  README.md  package.xml
src/epson_g365_driver_ros2/launch/: epson_g365_fixed_launch.py  v340_launch.py
src/epson_g365_driver_ros2/src/: sensor_epsonG365PDF1.h
src/global-mapping/: CMakeLists.txt  package.xml
src/global-mapping/src/: global_mapping_node.cpp
src/mapping/src/: extract_pointcloud.py  mapping.py  mapping_visualization.py
src/pc_compare/: pcd_compare.py
src/pcd_save/: CMakeLists.txt  package.xml
src/pcd_save/src/: SavePCDNode.py
src/pointcloud_saver/: package.xml  setup.cfg  setup.py
src/pointcloud_saver/launch/: saver.launch.py
src/pointcloud_saver/pointcloud_saver/: saver_node.py
src/stereo-depth/: package.xml  setup.cfg  setup.py
src/stereo-depth/stereo-depth/: foundationstereo-disparity.py  noise-estimate.py  parameters.py  stereo-depth-node.py
src/thermal-preprocessing/: .Xauthority  CMakeLists.txt  Dockerfile  camera_transformations.py  environment.yml  histogram.py  package.xml  ros_entrypoint.sh  run_preprocessing.py  stereo_rectification.py
src/thermal-preprocessing/launch/: preprocess-both-cams.py
src/thermal-preprocessing/src/: thermal-preprocessing-node.cpp  thermal-preprocessing.cpp
src/thermal-publisher/: CMakeLists.txt  package.xml
src/thermal-publisher/launch/: OLD_both_cameras_launch.py  both_cameras_launch.py  left_camera_launch.py  right_camera_launch.py  right_labelled_camera_launch.py
src/thermal-publisher/src/: bytes.cpp  rawBoson.cpp  rawBoson.h  thermal-publisher.cpp  thermal-publisher.h
workspace/: .bash_history
workspace/launch2/: preprocess-both-cams.py
workspace/mast3r-experiments/: bag_extractor.py  main.py
workspace/thermal-preprocessing/: CMakeLists.txt
