<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pcd_save</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="ranaisrivastav@gmail.com">ranai</maintainer>
  <license>MIT</license>

  <buildtool_depend>setuptools</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>open3d</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
